[gd_scene load_steps=9 format=3 uid="uid://dihw6ynkxt4hh"]

[ext_resource type="Texture2D" uid="uid://dr54su7oqdtgm" path="res://pokemon-assets/Graphics/Battle animations/ball_POKEBALL.png" id="1_5ml1e"]
[ext_resource type="Script" uid="uid://bfc1avr1yk11v" path="res://scenes/pokeball/pokeball.gd" id="1_gbj38"]
[ext_resource type="Texture2D" uid="uid://blkkr5cnr4anf" path="res://pokemon-assets/Graphics/Battle animations/ball_BEASTBALL_open.png" id="2_y5gs6"]
[ext_resource type="AudioStream" uid="uid://uxr63i6kaiuk" path="res://pokemon-assets/Audio/SE/Battle ball hit.ogg" id="4_t6mka"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gbj38"]
atlas = ExtResource("1_5ml1e")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6mka"]
atlas = ExtResource("2_y5gs6")
region = Rect2(0, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_y5gs6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbj38")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6mka")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gbj38"]
radius = 4.47214

[node name="Pokeball" type="Area2D"]
script = ExtResource("1_gbj38")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(0.375, 0.28125)
sprite_frames = SubResource("SpriteFrames_y5gs6")
animation = &"hit"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gbj38")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="sfx_hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_t6mka")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
